# memshare

./: Makefile  Makefile.am  configure.ac
inc/: memshare_api.h
src/: memsend.c  memshare.c  memshare.h  memshare_api.h  memwatch.c  queue.c  queue.h
src/examples/: main.c  tlog.c  tlog.h  tlog_api.h
src/test/: listen.c  main.c  proc.c  reply.c  testmain.c
